# clrun

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json
.cursor/rules/: use-clrun.mdc
python/: README.md  pyproject.toml
python/clrun/: __init__.py  __main__.py  cli.py  types.py  worker.py
python/clrun/buffer/: buffer_manager.py
python/clrun/commands/: head.py  input.py  key.py  kill.py  run.py  scp.py  status.py  tail.py
python/clrun/ledger/: ledger.py
python/clrun/pty/: pty_manager.py
python/clrun/queue/: queue_engine.py
python/clrun/runtime/: crash_recovery.py  lock_manager.py  restore.py
python/clrun/scp/: __init__.py  client.py  session.py
python/clrun/skills/: installer.py  templates.py
python/clrun/utils/: output.py  paths.py  validate.py
skills/clrun/: SKILL.md
src/: index.ts  types.ts  worker.ts
src/buffer/: buffer-manager.ts
src/commands/: head.ts  input.ts  key.ts  kill.ts  run.ts  scp.ts  status.ts  tail.ts
src/ledger/: ledger.ts
src/pty/: pty-manager.ts
src/queue/: queue-engine.ts
src/runtime/: crash-recovery.ts  lock-manager.ts  restore.ts
src/scp/: client.ts  session.ts
src/skills/: skill-installer.ts  templates.ts
src/utils/: output.ts  paths.ts  validate.ts
test/: integration.test.ts  openai-scp.test.ts  output.test.ts  scp-integration.test.ts  validate.test.ts  validation-integration.test.ts
test/fixtures/: scp-stub-server.js
website/: package-lock.json  package.json
website/public/: llms-full.txt  llms.txt
(+19 files in other folders)
